Resolves: tdf#100094 hyperlink tabpage put hyperlink name in wrong field

mismerge of

commit 74593273655e475017bb2bd45aba3c6b132e372d
Date:   Thu Jan 9 12:59:28 2014 +0000

    Resolves: #i123988# assure that hyperlink attribute...

Change-Id: I45391b112666a07a0edfa49b2a8682c446a92cf4
(cherry picked from commit 98294d715c72751d9dd47fd1995865e04b2bdf5a)
Reviewed-on: https://gerrit.libreoffice.org/28548
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit b9939b0642afefe96ae33cd964d6726dc405843d)